# FastAPI_Implementation

./: dvc.yaml  main.py  params.yaml  pyproject.toml
app/: main.py
data/processed/: cardio_processed.csv
models/: cardio_pipeline.pkl
src/: config.py  data_ingestion.py  model_prediction.py  model_train.py
src/fastapi_implementation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
