[project]
name = "fastapi-implementation"
version = "0.1.0"
description = "This is FastAPI Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chandan-aiops>=1.5.3",
    "flaml[automl]>=2.5.0",
    "imblearn>=0.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydentic>=0.0.1.dev3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
